Zen 7.x-3.x-dev, xxxx-xx-xx (development release)
------------------------
- #987916: Submitted by text doesn't use $submitted variable introduced in Drupal 7.0-rc1
- #978810 by bellHead: Region-specific template suggestions for sidebar regions always use region--sidebar.tpl.php
- #986290: $tabs displaying as string 'Array' due to change in theme_menu_local_tasks()
- #814978 by scor: The name attribute in an a tag is not valid in XHTML+RDFa 1.0
- #875528 by linclark: Theme registry rebuilt warning not linked to admin page
- #780690: Notice: Undefined index: date in _zen_preprocess_comment()
- #729144 by Frank Ralf: Update STARTERKIT theme-settings.php for Drupal 7
- #563060 by seutje and JohnAlbin: Port Zen to Drupal 7 (NOT YET COMPLETE)

Zen 6.x-2.0, 2010-06-26
-----------------------
- #791056 by meatsack and JohnAlbin: Zen clobbers Views 3 classes
- #838338: element-invisible class doesn't fully hide elements
- #723514 by kmonty: Link in STARTERKIT description incorrect
- Skip navigation's ID changed from #skip-to-nav to #skip-link
- Added $block_html_id to block.tpl.php
- #772488 by andreiashu: Fatal error: Call to undefined function
  ctools_menu_primary_local_tasks()
- #707410 by agentrickard and JohnAlbin: Add page-views and page-panels body classes
- #691426: Add D7-style named implementations of theme_links in page.tpl
- #683904: SUBTHEME_process functions do not work
- #552156: broken clearfix class causes overlapping containers in IE7
- #593290 by sfyn and JohnAlbin: Chaos Tools/Panels edit tab not working with Zen
- #661628 by Jacine and JohnAlbin: Integration with Skinr module
- by Jacine: Added views-view.tpl.php with support for $classes variables
- by caroltron, gleroux02, _natron, and JohnAlbin: Add panels 3 layouts using
  Zen layout method

Zen 6.x-2.0-beta1, 2009-11-10
-----------------------------
- #478134 by mithrill: Improve docs about sites/all/themes and sites/default/themes folders