@@ -41,8 +41,8 @@ stylesheets[print][] = css/print.css
 ; stylesheets[only screen and (max-device-width: 480px)][] = css/iphone.css
 
   ; Set the conditional stylesheets that are processed by IE.
-conditional-stylesheets[if IE][all][]       = css/ie.css
-conditional-stylesheets[if lte IE 6][all][] = css/ie6.css
+stylesheets-conditional[IE][all][]       = css/ie.css
+stylesheets-conditional[lte IE 6][all][] = css/ie6.css
 
   ; Optionally add some JavaScripts to your theme.
 ; scripts[] = js/script.js
