@@ -29,9 +29,9 @@ settings[zen_rebuild_registry]     = 0
 settings[zen_wireframes]           = 0
 ;settings[shortcut_module_link]    = 1
 
-; Information added by drupal.org packaging script on 2010-12-03
+; Information added by drupal.org packaging script on January 1, 1970 - 00:00
 version = "7.x-3.x-dev"
 core = "7.x"
 project = "zen"
-datestamp = "1291379226"
+datestamp = "1296348554"
 
